--- a/packages/licid/package.json
+++ b/packages/licid/package.json
@@ -2,24 +2,39 @@
   "name": "@drowr/licid",
   "version": "0.0.1",
   "type": "module",
+  "sideEffects": [
+    "**/*.css"
+  ],
   "exports": {
-    ".": "./index.ts"
+    ".": "./index.ts",
+    "./styles.css": "./dist/index.css",
+    "./*": "./dist/*.js"
   },
   "files": [
     "src",
+    "dist",
     "index.ts"
   ],
   "keywords": [
     "astro-component"
   ],
   "scripts": {
-    "build": "astro build",
-    "astro": "astro"
+    "build:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css --minify",
+    "check-types": "astro check",
+    "dev:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css --watch"
   },
   "devDependencies": {
+    "@tailwindcss/cli": "^4.1.5",
     "astro": "^5.16.9"
   },
   "peerDependencies": {
     "astro": "^4.0.0 || ^5.0.0"
+  },
+  "dependencies": {
+    "@astrojs/check": "^0.9.6",
+    "@astrojs/ts-plugin": "^1.10.6",
+    "@tailwindcss/vite": "^4.1.18",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.2"
   }
 }
