--- a/packages/licid/tsconfig.json
+++ b/packages/licid/tsconfig.json
@@ -3,6 +3,11 @@
   "include": [".astro/types.d.ts", "**/*"],
   "exclude": ["dist"],
   "compilerOptions": {
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "plugins": [
+        {
+            "name": "@astrojs/ts-plugin"
+        },
+    ],
   }
 }
