--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@drowr/eslint-config": "*",
+    "@drowr/typescript-config": "*",
+    "astro-eslint-parser": "^1.2.2",
     "prettier": "^3.8.0",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.2"
