--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^9.0.4",
     "@astropub/md": "^1.0.0",
     "@drowr/licid": "*",
     "@tailwindcss/vite": "^4.1.18",
