--- a/packages/licid/package.json
+++ b/packages/licid/package.json
@@ -25,12 +25,14 @@
   },
   "devDependencies": {
     "@drowr/eslint-config": "*",
+    "@drowr/tailwind-config": "*",
     "@tailwindcss/cli": "^4.1.5",
     "astro": "^5.16.9",
     "astro-eslint-parser": "^1.2.2",
     "prettier": "^3.8.0",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.7.2"
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "typescript": "^5.9.2"
   },
   "peerDependencies": {
     "astro": "^4.0.0 || ^5.0.0"
@@ -39,7 +41,6 @@
     "@astrojs/check": "^0.9.6",
     "@astrojs/ts-plugin": "^1.10.6",
     "@tailwindcss/vite": "^4.1.18",
-    "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.2"
+    "tailwindcss": "^4.1.18"
   }
 }
